# FL_Poison

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  analyze_short_runs.py  analyze_triguardfl_fp_fn.py  batchrun.py  build_adv_client_loss_latex_table.py  build_test_loss_latex_tables.py  config_utils.py  eval_schedule.py  extract_slurm_out_to_logs.py  global_args.py  global_utils.py  main.py  package-lock.json  package.json  performance_utils.py  plot_adv_accuracy_sensitivity.py  plot_alpha_accuracy_non_iid.py  plot_num_clients_accuracy_sensitivity.py  plot_scratch_results_2x2.py  plot_triguardfl_reputation_curves.py  pyproject.toml  tifs_scope_responses.md  tifs_scope_responses_500chars.md
aggregators/: aggregator_utils.py  aggregatorbase.py  auror.py  bucketing.py  bulyan.py  centeredclipping.py  crfl.py  deepsight.py  dnc.py  flame.py  fldetector.py  fltrust.py  foolsgold.py  krum.py  mean.py  median.py  multikrum.py  normclipping.py  rfa.py  signguard.py  simpleclustering.py  triguardfl.py  trimmedmean.py
attackers/: alie.py  altermin.py  edgecase.py  fangattack.py  ipm.py  mimic.py  min.py  modelreplacement.py  neurotoxin.py  threedfed.py
configs/: FedAvg_CHMNIST_Resnet34.yaml  FedAvg_CHMNIST_config.yaml  FedAvg_CIFAR100_Resnet18.yaml  FedAvg_CIFAR100_config.yaml  FedAvg_CIFAR10_Resnet18.yaml  FedAvg_CIFAR10_config.yaml  FedAvg_CIFAR10_vgg19.yaml  FedAvg_CINIC10_Resnet18.yaml  FedAvg_CINIC10_config.yaml  FedAvg_HAR_Fcn.yaml  FedAvg_HAR_config.yaml  FedAvg_MNIST_Lenet.yaml  FedAvg_MNIST_config.yaml  FedAvg_TinyImageNet_Resnet18.yaml  FedOpt_CIFAR10_config.yaml  (+18 more)
(+278 files in other folders)
